tdf#118026: Use ooo::vba::XCollection instead of css::container::XEnumeration

An object returned by XCollection::Item() is of the right "VBA" kind
that we want. One returned by XEnumeration::nextElement() is not.

Change-Id: I26132a7d0f2638a61f2711b941386a889fabea72